# eventyay-talk-downstream

./: .gitmodules  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  docker-celery-entrypoint.sh  docker-compose.yml  docker.diff  mysql.diff  pretalx.bash  pyproject.toml  pytest.ini  setup.cfg  setup.py  start.sh
.github/workflows/: docker.yml  style.yml
ansible-role/pretalx/tasks/: main.yml
ansible-role/pretalx/templates/: pretalx.cfg.j2
ansible-role/pretalx/vars/: main.yml
conf/: pretalx-password.secret  pretalx.cfg
conf/nginx/conf.d/: pretalx.conf
deployment/docker/: nginx.conf  pretalx.bash  supervisord.conf
pretalx_downstream/: __init__.py  apps.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
pretalx_downstream/locale/ar/LC_MESSAGES/: django.po
pretalx_downstream/locale/cs/LC_MESSAGES/: django.po
pretalx_downstream/locale/d/LC_MESSAGES/: django.po
pretalx_downstream/locale/de/LC_MESSAGES/: django.po
pretalx_downstream/locale/de_DE/LC_MESSAGES/: django.po
pretalx_downstream/locale/de_Formal/LC_MESSAGES/: django.po
pretalx_downstream/locale/el/LC_MESSAGES/: django.po
pretalx_downstream/locale/en_Mozilla/LC_MESSAGES/: django.po
pretalx_downstream/locale/es/LC_MESSAGES/: django.po
pretalx_downstream/locale/id/LC_MESSAGES/: django.po
pretalx_downstream/management/commands/: downstream_pull.py
pretalx_downstream/migrations/: 0001_initial.py
pretalx_downstream/templates/pretalx_downstream/: settings.html
reverse-proxy-examples/docker-compose/: Readme.md  traefik.toml
reverse-proxy-examples/nginx/: Readme.MD
(+18 files in other folders)
