[project]
name = "pretalx-downstream"
dynamic = ["version"]
description = "Use pretalx passively by importing another event's schedule."
readme = "README.rst"
license = {text = "Apache Software License"}
keywords = ["pretalx"]
authors = [
  {name = "Tobias Kunze", email = "r@rixx.de"},
]
maintainers = [
  {name = "Tobias Kunze", email = "r@rixx.de"},
]

dependencies = []

[project.urls]
homepage = "https://github.com/pretalx/pretalx-downstream"
repository = "https://github.com/pretalx/pretalx-downstream.git"

[project.entry-points."pretalx.plugin"]
pretalx_downstream = "pretalx_downstream:PretalxPluginMeta"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretalx_downstream.__version__"}

[tool.setuptools.packages.find]
include = ["pretalx*"]

[tool.check-manifest]
ignore = [
  ".*",
]
